k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmis-prod
  labels:
    name: hmis-prod
    environment: production
    app: hmis-saas
